--- a/macros.tex
+++ b/macros.tex
@@ -49,7 +49,7 @@
 \newcommand{\ExpHybrid}{T_{\text{Hybrid}}}
 
 %Flow Variants
-\newcommand{\FlowVariant}[4]{(#1\text{F},#2\text{C},#3\text{M},#4\text{FM})}
+\newcommand{\FlowVariant}[3]{(#1\text{F},#2\text{M},#3\text{FM})}
 \newcommand{\Constant}[1]{\textsc{Constant#1}}
 
 %Partitioner Variants
