--- a/master_thesis/sections/conclusion.tex
+++ b/master_thesis/sections/conclusion.tex
@@ -14,25 +14,23 @@ the execution on the \emph{Lawler}-Network \cite{lawler1973} on real-world bench
 Our \emph{flow}-based refinement framework is based on the ideas of Sanders and Schulz
 \cite{sanders2011engineering} (developed for multilevel graph partitioning). Given an already bipartitioned
 hypergraph, we show how to configure the source and sink sets of the flow network 
-of a subhypergraph such that a \emph{Max-Flow-Min-Cut} computation yields to a cut smaller 
-or equal than the cut before on the original hypergraph. A main contribution is that we proof
-that applying the source and sink set modeling approach of Sanders and Schulz one-to-one on 
-hypergraphs results in cuts greater or equal than with our optimized definition. This is because 
-\emph{border hyperdeges}, which induced sources and sinks, can be
-split into three different disjoint subsets on hypergraphs. This distinction enables a more efficient
-configuration of the sources and sinks. Additionally, we explain how one can find all 
+of a subhypergraph such that a \emph{Max-Flow-Min-Cut} computation yields a cut smaller 
+or equal than the cut before on the original hypergraph. Further, we extended the source
+and sink sets with additional nodes such that we can calculate the cut of hypergraph $H$
+after a \emph{Max-Flow-Min-Cut} computation with the help of the amount of a maximum $(S,T)$-flow
+on a subhypergraph $H_{V'}$ in constant time. Additionally, we explain how one can find all 
 minimum $(s,t)$-cutsets with one maximum $(s,t)$-flow calculation on hypergraphs. \\
 We integrated our framework into the $n$-level hypergraph partitioner
 \emph{KaHyPar}. A \emph{flow}-based refinement is executed in $\log{n}$ levels of the multilevel
 hierarchy between each adjacent block in the quotient graph. The pairwise block scheduling 
-refinement is implemented in rounds and terminates if none of the blocks changes anymore.
+refinement is implemented in rounds and terminates if no hypernode changed its block in a round.
 The sizes of the flow problems are chosen adaptively. If a \emph{flow} computation on two blocks
-yields to an improvement the flow problem size is increased, otherwise it is decreased. 
+yields an improvement the flow problem size is increased, otherwise it is decreased. 
 Additionally, we try to automatically balance the partition after \emph{Max-Flow-Min-Cut}
 computation by iterating over each minimum $(S,T)$-cutset. In the remaining levels, 
 where no flow is performed, the classical \emph{FM} heuristic is used to improve the quality 
 of a partition. An observation during implementation was that only a minority of 
-the \emph{Max-Flow-Min-Cut} computations leads to an improvement of the original partition. 
+the \emph{Max-Flow-Min-Cut} computations leads to an improvement of quality. 
 Therefore, we implement several speed-up heuristics which prevents the
 execution of additional pairwise \emph{flow} refinements. \\
 Our new quality configuration \KaHyPar{MF} produced on $95\%$ of our benchmark instances
@@ -75,7 +73,7 @@ for that behavior:
 \item Many labels have to be introduced which lead to a large number of 
       main memory accesses.
 \item Also the implicit flow network is not flexible enough. Adding a new sparsifying
-      technique would require with great certainty a reimplementation of the flow network.
+      technique would require with great certainty a reimplementation of the implicit flow network.
 \end{enumerate}
 In Section \ref{sec:flow_local_search_hypergraph} and \ref{sec:speed_up} we show that with
 three simple speed up heuristics our \emph{flow}-based refinement framework is up to a factor
