--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -161,11 +161,10 @@ There are several configurations and tuning parameters which we have to evaluate
 \begin{itemize}
 \item \emph{Max-(F)low-Min-Cut} computations as refinement algorithm (see Section \ref{sec:flow_local_search_hypergraph})
 \item \emph{Adaptive Flow Iteration} parameter $\alpha'$ (see Section \ref{sec:adaptive_flow_iterations})
-\item \emph{(C)ut Border Hyperedges} as sources and sinks (see Section \ref{sec:source_and_sink})
 \item \emph{(M)ost Balanced Minimum Cut} heuristic (see Section \ref{sec:mbmc_hypergraphs})
 \item Combining \emph{Max-(F)low-Min-Cut} computations with \emph{(FM)} refinement
 \end{itemize}
-In the following, we will denote a configuration e.g. with \FlowVariant{+}{-}{-}{-} which indicates
+In the following, we will denote a configuration e.g. with \FlowVariant{+}{-}{-} which indicates
 which heuristic resp. technique is enabled $(+)$ or disabled $(-)$. The meaning of the 
 abbreviations is explained in the enumeration above (see letters inside parenthesis). We evaluate
 a configuration for $k \in \{2,4,8,16,32,64,128\}$, $\alpha' \in \{1,2,4,8,16\}$
@@ -173,64 +172,52 @@ and $10$ different seeds on our parameter tuning benchmark subset ($\epsilon = 3
 Our pairwise flow-based refinement is embedded in a $k$-way \emph{Active Block Scheduling}
 refinement which is executed on each level $i$ with $i = 2^j$ ($j \in \mathbb{N}_+$) 
 (see Section \ref{sec:flow_local_search_hypergraph}). Additionally, we tested configuration
-\FlowVariant{+}{+}{+}{+} with \emph{flow execution policy} $i = 128j$. This configuration
+\FlowVariant{+}{+}{+} with \emph{flow execution policy} $i = 128j$. This configuration
 has an impracticable running time, but should provide a lower bound.
 We refer to this variant as \Constant{128}. As a baseline reference, we use the 
 latest quality configuration of \emph{KaHyPar} (\KaHyPar{CA}) \cite{heuer2017improving}. \\
 The results are summarized in \autoref{tbl:alpha_exp}. The values
 in the column \emph{Avg} are improvements of the connectivity metric
-relative to our baseline configuration \FlowVariant{-}{-}{-}{+}. The running
+relative to our baseline configuration \FlowVariant{-}{-}{+}. The running
 time are absolute values in seconds. The first observation is that flows on
 its own as refinement strategy are not strong enough to outperform the
 \emph{FM} heuristic. Our strongest configuration with $\alpha' = 16$
-is $2.5\%$ worse than our \emph{FM} baseline. But the result 
+is $2.58\%$ worse than our \emph{FM} baseline. But the result 
 is still remarkable because we only execute flows on $\log{n}$ levels
 instead of $n$ as the \emph{FM} algorithm does. The running time
-scales nearly linear with parameter $\alpha'$. Using our improved source 
-and sink modeling approach with \emph{Cut Border Hyperedges} (see Equation
-\ref{S_final_border_hyperedges} and \ref{T_final_border_hyperedges})
-significantly improves the solution quality especially for small $\alpha'$.
-For small $\alpha$ most of the hypernodes are either a source or a sink. 
-Introducing \emph{Cut Border Hyperedges} reduces the number of hypernode
-sources and sinks by adding hyperedge sources and sinks. The quality 
-improvement with this technique is more effective
-for small $\alpha'$, because it significantly increases the possibilities
-of moving hypernodes between the blocks compared to the source and sink set
-modeling approach with Equation \ref{S_border_hyperedges} and \ref{T_border_hyperedges}.
-The opposite effect can be observed if we use the \emph{Most Balanced Minimum Cut} heuristic
-without \emph{Cut Border Hyperedges}. The quality improvement is more significant for large
+scales nearly linear with parameter $\alpha'$. \\
+Enabling the \emph{Most Balanced Minimum Cut} heuristic significantly improves the
+quality compared to the baseline flow configuration \FlowVariant{+}{-}{-}.
+But the quality improvements are more significant for large
 $\alpha'$. The larger the flow problem, the larger is the number of different minimum 
 $(S,T)$-cutsets and this increases the possibility to find a feasible solution according to 
-our balanced constraint. If we combine both techniques, we obtain a configuration which significantly
-improves the solution quality for all $\alpha'$ compared to our baseline flow configuration.
-Also it outperforms our baseline \emph{FM} configuration for $\alpha' = 16$ by $0.51\%$.
+our balanced constraint. Also it outperforms our baseline \emph{FM} 
+configuration for $\alpha' = 16$ by $0.51\%$.\\
 If we enable \emph{FM} refinement at all levels where no flow is executed, we improve the solution
 quality by nearly $2\%$ (for $\alpha' = 16$). Also, the running time of this variant is faster
 than all previous flow configurations because we transfer more work to the \emph{FM} refinement.
-It has as consequence that a block becomes faster \emph{inactive} during \emph{Active Block 
+It has as a consequence that a block becomes faster \emph{inactive} during \emph{Active Block 
 Scheduling} and this decreases the number of rounds of complete pairwise flow-based refinements
-on the quotient graph. Finally, \Constant{128} gives us a lower bound of the quality
+on the quotient graph. \\
+Finally, \Constant{128} gives us a lower bound of the quality
 achievable with a combination of flow-based and \emph{FM} refinement. Flows are executed 
 in each $128$th level of the multilevel hierarchy. The quality is $2.44\%$ better than our
-baseline configuration, but $\approx 100$ slower. Compared to \FlowVariant{+}{+}{+}{+} for 
-$\alpha = 16$, \Constant{128} is only $0.57\%$ better and around $\approx 25$ times slower.
+baseline configuration, but $\approx 100$ slower. Compared to \FlowVariant{+}{+}{+} for 
+$\alpha = 16$, \Constant{128} is only $0.57\%$ better and around $\approx 25$ times slower.\\
+Our best configuration is \FlowVariant{+}{+}{+} with $\alpha' = 16$. It is also the most 
+effective one (see Effectiveness Test in Appendix \ref{appendix:effectiveness_test}). For
+further experiments, we refer to this variant as \KaHyPar{MF}.
 
 \begin{table}
 \renewcommand{\arraystretch}{1.15}
 \centering
-\begin{tabular}{|r||c|c||c|c||c|c|}
+\begin{tabular}{|r||c|c||c|c||c|c|c|c|}
 \toprule
- Config. & \multicolumn{2}{c||}{\FlowVariant{+}{-}{-}{-}} & \multicolumn{2}{c||}{\FlowVariant{+}{+}{-}{-}}  & \multicolumn{2}{c|}{\FlowVariant{+}{-}{+}{-}} \\
+ Config. & \multicolumn{2}{c||}{\FlowVariant{+}{-}{-}} & \multicolumn{2}{c||}{\FlowVariant{+}{+}{-}}  & \multicolumn{2}{c|}{\FlowVariant{+}{+}{+}} & \multicolumn{2}{c|}{\Constant{128}} \\
 \midrule
-$\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
+$\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
 \midrule%
-\csname @@input\endcsname experiments/flow_alpha/flow_alpha_table1.tex 
-\midrule[1.25pt]%
- Config. & \multicolumn{2}{c||}{\FlowVariant{+}{+}{+}{-}} & \multicolumn{2}{c||}{\FlowVariant{+}{+}{+}{+}} & \multicolumn{2}{c|}{\Constant{128}} \\
-\midrule
-$\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
-\midrule%
-\csname @@input\endcsname experiments/flow_alpha/flow_alpha_table2.tex 
+\csname @@input\endcsname experiments/flow_alpha/flow_alpha_table.tex 
 \bottomrule
 \end{tabular}
 \caption{ Table contains results for different configurations of our flow-based refinement
@@ -239,7 +226,6 @@ $\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
 \label{tbl:alpha_exp}
 \end{table}
 
-\todo{evaluate effectiveness of flows}
 
 \subsection{Speed-Up Heuristics}
 \label{sec:speed_up}
@@ -260,7 +246,7 @@ partitions with $2\%$ better quality ($(\lambda - 1)$-metric) than \KaHyPar{CA} 
 slowdown only of a factor of $\le 2$. In the following, we will denote our final 
 configuration \KaHyParConfig{MF}{R1,R2,R3} with \KaHyPar{MF}.
 
-\begin{table}
+\begin{table}[ht]
 \renewcommand{\arraystretch}{1.15}
 \centering
 \begin{tabular}{l|cccc}
